fix/title overflow in item

--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -30,9 +30,13 @@
       span {
         font-size: 18px;
         margin-left: space(3);
+        text-overflow: ellipsis;
+        overflow-x: hidden;
+        max-width: 200px;
       }
     }
     & > :nth-child(2) {
+      display: flex;
       & > :first-child {
         margin-right: space(4);
       }
@@ -71,13 +75,16 @@
   }
   .list-item {
     & > :first-child {
+      & > :first-child {
+        span {
+          max-width: 100px;
+        }
+      }
       & > :nth-child(2) {
         width: 40%;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-      }
-      & > :nth-child(2) {
         & > :first-child {
           margin-right: space(0);
           margin-bottom: space(2);
